white spacing top bottom fixed

--- a/app.client/src/app/componets/login/login.component.css
+++ b/app.client/src/app/componets/login/login.component.css
@@ -1,9 +1,20 @@
+html {
+  height: 100%;
+}
+
 body {
   margin: 0;
   padding: 0;
+  height: 100%;
+  overflow: hidden; /* Prevent scrolling */
 }
- .outer {
-  height: 100vh;
+
+.background {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
   background: linear-gradient(to top, #c9c9ff 50%, #A0E7E5 90%) no-repeat;
 }
 
@@ -38,7 +49,7 @@ a:hover {
   min-height: 380px;
   box-shadow: 20px 20px 80px rgb(218, 218, 218);
   border-radius: 12px;
-  margin-top: 100px;
+  margin-top: 100px; 
 }
 
 .input-field {
